layout issues AGAINNN

--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -111,7 +111,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  margin-bottom: 2vh;
+  margin-bottom: 5vh;
   border: #ff00c3 5px solid;
 }
 
